week-art/placeholder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week-art-placeholder
spec:
  type: ClusterIP
  selector:
    app: week-art-placeholder
  ports:
    - name: http
      port: 80
      targetPort: 80
