week-art/placeholder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week-art-placeholder
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/forwarded-for-header: "CF-Connecting-IP"
spec:
  ingressClassName: nginx
  rules:
    - host: week-art.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: week-art-placeholder
                port:
                  number: 80
  tls:
    - hosts:
        - week-art.ru
      secretName: week-art-placeholder-tls
